fix nav bar collapse

--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,11 @@ html {
     --stone-purple: #7c677f;
     --off-white: #FAF9F6;
   }
+
+  @font-face {
+    font-family: 'Cedarville Cursive';
+    src: url('../src/fonts/cedarville-cursive.ttf') format('truetype');
+  }
   /*
 GENERAL STYLING
 */
@@ -83,7 +88,7 @@ a:hover {
 }
 
 .box-shadow,
-.paralax-mf,
+/* .paralax-mf, */
 .service-box,
 .work-box,
 .card-blog {
@@ -287,51 +292,6 @@ a:hover {
   margin-right: 10px;
 }
 
-/* Ico Circle */
-
-.ico-circle {
-  height: 100px;
-  width: 100px;
-  font-size: 2rem;
-  border-radius: 50%;
-  line-height: 1.55;
-  margin: 0 auto;
-  text-align: center;
-  box-shadow: 0 0 0 10px var(--sky-blue);
-  display: block;
-}
-
-/* Owl Carousel */
-
-.owl-theme .owl-dots {
-  text-align: center;
-  margin-top: 18px;
-}
-
-.owl-theme .owl-dots .owl-dot {
-  display: inline-block;
-}
-
-.owl-theme .owl-dots .owl-dot span {
-  width: 18px;
-  height: 7px;
-  margin: 5px 5px;
-  background: var(--off-white);
-  border: 0px solid var(--off-white);
-  display: block;
-  transition: all 0.6s ease-in-out;
-  cursor: pointer;
-}
-
-.owl-theme .owl-dots .owl-dot:hover span {
-  background-color: var(--off-white);
-}
-
-.owl-theme .owl-dots .owl-dot.active span {
-  background-color: var(--off-white);
-  width: 25px;
-}
-
 /* Scrolltop S */
 
 .scrolltop-mf {
@@ -440,7 +400,7 @@ NAVBAR
 .navbar-b {
   transition: all .5s ease-in-out;
   background-color: #fff;
-  padding-top: 1.563rem;
+  padding: 1.563rem;
   padding-bottom: 1.563rem;
 }
 
@@ -451,8 +411,6 @@ NAVBAR
 .navbar-b.navbar-trans .nav-item,
 .navbar-b.navbar-reduce .nav-item {
   position: relative;
-  padding-right: 10px;
-  padding-left: 0;
 }
 
 .navbar-b.navbar-trans .nav-link,
@@ -612,7 +570,7 @@ NAVBAR
 .navbar-toggler:not(.collapsed) span:nth-child(1) {
   position: absolute;
   left: 12px;
-  top: 10px;
+  top: 15px;
   -webkit-transform: rotate(135deg);
   transform: rotate(135deg);
   opacity: 0.9;
@@ -627,10 +585,18 @@ NAVBAR
 .navbar-toggler:not(.collapsed) span:nth-child(3) {
   position: absolute;
   left: 12px;
-  top: 10px;
+  top: 15px;
   -webkit-transform: rotate(-135deg);
   transform: rotate(-135deg);
   opacity: 0.9;
+}
+
+.show {
+  padding: 10px;
+}
+
+.show > .expanded {
+    box-shadow: inset 0 0 5px 5px rgba(0, 0, 0, 0.05);
 }
 
 /*
@@ -661,8 +627,10 @@ INTRO
 
 .intro .intro-title {
   color: var(--stone-purple);
-  font-weight: 900;
+  font-weight: 700;
   font-size: 4rem;
+  font-family: "Cedarville Cursive";
+  font-stretch: condensed;
 }
 
 .intro .intro-subtitle {
